--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,9 +6,9 @@ body {
    /* top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);*/
-    background-color: rgba(0, 0, 50, 0.4); /* Black background with 50% opacity */
-    padding: 1rem; /* Add some padding for better readability */
-    border-radius: 0.1rem; /* Optional: add rounded corners */
+    background-color: rgba(20, 0, 50, 0.4); /* Black background with 50% opacity *//*
+    padding: 1rem; *//* Add some padding for better readability *//*
+    border-radius: 0.1rem; *//* Optional: add rounded corners */
 }
 
 .carousel-caption h1 {
