--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <!--poster image-->
-<div id="poster">
+<div id="poster" class="mb-5">
     <img src="static/assets/img/poster.jpg" class="d-block w-100" alt="Bar">
     <div class="carousel-caption">
         <h1>Club Termix</h1>
@@ -11,26 +11,25 @@
     </div>
 </div>
 
-<div class="container marketing">
-
+<div class="container marketing pt-3">
     <!-- Three columns of text below the carousel -->
     <div class="row">
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+      <div class="col-lg-4 d-flex flex-column align-items-center text-center">
+        <img src="static/assets/img/drinks.jpg" alt="glasses with drinks" class="rounded-circle" width="140" height="140">
+        <h2 class="fw-normal">Lahodné drinky</h2>
+        <p>Široká nabídka výborných nápojů. <br>Přijďte ochutnat naše vychlazené koktejly.</p>
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
       </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+       <div class="col-lg-4 d-flex flex-column align-items-center text-center">
+        <img src="static/assets/img/karaoke.jpg" alt="microphone" class="rounded-circle" width="140" height="140">
+        <h2 class="fw-normal">Karaoke</h2>
+        <p>Přidejte se do rytmu s populárními hity. <br> Zazpívat si u nás můžete každou středu.</p>
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
       </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
+      <div class="col-lg-4 d-flex flex-column align-items-center text-center">
+        <img src="static/assets/img/party.jpg" alt="man with costume" class="rounded-circle" width="140" height="140">
+        <h2 class="fw-normal">Tématické párty</h2>
+        <p>O akce u nás není nouze. <br> Přijďte zažít pořádnou zábavu.</p>
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
