--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -72,3 +72,10 @@ body {
         font-size: 0.625rem;
     }
 }
+
+.rounded-circle {
+    border-radius: 50%;
+    width: 160px;
+    height: 160px;
+    object-fit: cover; /* Ensures the image covers the container while maintaining its aspect ratio */
+}
