--- a/templates/index.html
+++ b/templates/index.html
@@ -13,27 +13,26 @@
 
 <div class="container marketing pt-3">
     <!-- Three columns of text below the carousel -->
-    <div class="row">
+    <div id="feature_list" class="row">
       <div class="col-lg-4 d-flex flex-column align-items-center text-center">
-        <img src="static/assets/img/drinks.jpg" alt="glasses with drinks" class="rounded-circle" width="140" height="140">
+        <img src="static/assets/img/drinks.jpg" alt="glasses with drinks" class="rounded-circle img-hover" >
         <h2 class="fw-normal">Lahodné drinky</h2>
         <p>Široká nabídka výborných nápojů. <br>Přijďte ochutnat naše vychlazené koktejly.</p>
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
       </div><!-- /.col-lg-4 -->
        <div class="col-lg-4 d-flex flex-column align-items-center text-center">
-        <img src="static/assets/img/karaoke.jpg" alt="microphone" class="rounded-circle" width="140" height="140">
+        <img src="static/assets/img/karaoke.jpg" alt="microphone" class="rounded-circle img-hover">
         <h2 class="fw-normal">Karaoke</h2>
         <p>Přidejte se do rytmu s populárními hity. <br> Zazpívat si u nás můžete každou středu.</p>
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4 d-flex flex-column align-items-center text-center">
-        <img src="static/assets/img/party.jpg" alt="man with costume" class="rounded-circle" width="140" height="140">
+        <img src="static/assets/img/party.jpg" alt="man with costume" class="rounded-circle img-hover">
         <h2 class="fw-normal">Tématické párty</h2>
         <p>O akce u nás není nouze. <br> Přijďte zažít pořádnou zábavu.</p>
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
-
 
     <!-- START THE FEATURETTES -->
 
@@ -41,11 +40,11 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Umíme to roztřepat. <span class="text-body-secondary">Přiďte se o tom přesvědčit.</span></h2>
+        <p class="lead">Náš sortiment vás určitě nudit nebude. <br>Od kvalitních vín, přes populární likéry, k lákavým likérům.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+        <img src="static/assets/img/barman.jpg" alt="barman" class="large_square">
       </div>
     </div>
 
@@ -53,11 +52,11 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Interiér, který baví. <span class="text-body-secondary">čekáme na vás.</span></h2>
+        <p class="lead">Místo na posezení s přáteli, nebo pořádnou oslavu? <br> Jsme připraveni.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+        <img src="static/assets/img/car.jpg" alt="interier" class="large_square">
       </div>
     </div>
 
@@ -65,11 +64,11 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        <h2 class="featurette-heading fw-normal lh-1">U nás jedeme i po půlnoci. <span class="text-body-secondary">Ukaž, jak to umíš rozjet.</span></h2>
+        <p class="lead">Roztočit to u nás není žádná věda <br> Zchladit se pak můžeš našimi ledovými drinky.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+        <img src="static/assets/img/night_life.jpg" alt="barman" class="large_square">
       </div>
     </div>
 
