--- a/templates/index.html
+++ b/templates/index.html
@@ -14,19 +14,19 @@
 <div class="container marketing pt-3">
     <!-- Three columns of text below the carousel -->
     <div id="feature_list" class="row">
-      <div class="col-lg-4 d-flex flex-column align-items-center text-center">
+      <div class="col-lg-4 col-sm-6 d-flex flex-column align-items-center text-center">
         <img src="static/assets/img/drinks.jpg" alt="glasses with drinks" class="rounded-circle img-hover" >
         <h2 class="fw-normal">Lahodné drinky</h2>
         <p>Široká nabídka výborných nápojů. <br>Přijďte ochutnat naše vychlazené koktejly.</p>
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
       </div><!-- /.col-lg-4 -->
-       <div class="col-lg-4 d-flex flex-column align-items-center text-center">
+       <div class="col-lg-4 col-sm-6 d-flex flex-column align-items-center text-center">
         <img src="static/assets/img/karaoke.jpg" alt="microphone" class="rounded-circle img-hover">
         <h2 class="fw-normal">Karaoke</h2>
         <p>Přidejte se do rytmu s populárními hity. <br> Zazpívat si u nás můžete každou středu.</p>
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
       </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4 d-flex flex-column align-items-center text-center">
+      <div class="col-lg-4 col-sm-12 d-flex flex-column align-items-center text-center">
         <img src="static/assets/img/party.jpg" alt="man with costume" class="rounded-circle img-hover">
         <h2 class="fw-normal">Tématické párty</h2>
         <p>O akce u nás není nouze. <br> Přijďte zažít pořádnou zábavu.</p>
