--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
         <p class="lead">Náš sortiment vás určitě nudit nebude. <br>Od kvalitních vín, přes populární likéry, k lákavým likérům.</p>
       </div>
       <div class="col-md-5">
-        <img src="static/assets/img/barman.jpg" alt="barman" class="large_square">
+        <img src="static/assets/img/barman.jpg" alt="barman" class="large_square bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto ">
       </div>
     </div>
 
@@ -56,7 +56,7 @@
         <p class="lead">Místo na posezení s přáteli, nebo pořádnou oslavu? <br> Jsme připraveni.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="static/assets/img/car.jpg" alt="interier" class="large_square">
+        <img src="static/assets/img/car.jpg" alt="interier" class="large_square bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
       </div>
     </div>
 
@@ -68,7 +68,7 @@
         <p class="lead">Roztočit to u nás není žádná věda <br> Zchladit se pak můžeš našimi ledovými drinky.</p>
       </div>
       <div class="col-md-5">
-        <img src="static/assets/img/night_life.jpg" alt="barman" class="large_square">
+        <img src="static/assets/img/night_life.jpg" alt="barman" class="large_square bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
       </div>
     </div>
 
