--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -67,24 +67,29 @@ body {
 ------------------------- */
 
 .featurette-divider {
-  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+  margin: 5rem; /* Space out the Bootstrap <hr> more */
 }
 
-/* Thin out the marketing headings */
-/* rtl:begin:remove */
+/* Thin out the marketing headings*/
 .featurette-heading {
   letter-spacing: -.05rem;
 }
 
-@media (min-width: 40em) {
-  /* Bump up size of carousel content */
-  .featurette-heading {
+
+.featurette-heading {
     font-size: 50px;
-  }
 }
 
-@media (min-width: 62em) {
+@media (max-width: 992px) {
   .featurette-heading {
-    margin-top: 7rem;
+    font-size: 40px;
   }
+}
+@media (max-width: 576px) {
+  .featurette-heading {
+    font-size: 30px;
+  }
+  .featurette-divider {
+  margin: 2rem; /* Space out the Bootstrap <hr> more */
+}
 }
