--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,9 +2,17 @@ body {
     background-color: #212529;
 }
 #poster{
+    height: 100vh;
     position: relative;
-    width: 100vw;
+    overflow: hidden;
 }
+#poster img.poster-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image covers the entire container */
+    object-position: center; /* Ensures the center of the image is always visible */
+}
+
 .carousel-caption {
     position: absolute;
     top: 50%;
@@ -20,10 +28,14 @@ body {
 }
 
 .carousel-caption h1 {
-    font-size: 2rem; /* Default size */
+    font-size: 2.5rem; /* Default size */
 }
 .carousel-caption p {
     font-size: 1.5rem; /* Default size */
+}
+
+.responsive-br {
+    display: none; /* Hide line break on larger screens */
 }
 
 @media (max-width: 991px) {
@@ -36,14 +48,14 @@ body {
     .carousel-caption{
         height: 40%;
     }
+    .responsive-br {
+        display: inline;
+    }
 }
 
 @media (max-width: 630px) {
-    .carousel-caption h1 {
-        font-size: 2rem;
-    }
-    .carousel-caption p {
-        font-size: 1rem; /* Default size */
+    .carousel-caption{
+        width: 70%;
     }
  }
 
