--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
 
 <!--poster image-->
 <div id="poster" class="mb-5">
-    <img src="static/assets/img/poster.jpg" class="d-block w-100" alt="Bar">
+    <img src="static/assets/img/poster.jpg" class="d-block w-100 poster-img" alt="Bar">
     <div class="carousel-caption">
         <h1>Club Termix</h1>
-        <p>Gay bar v centru Prahy</p>
+        <p>Gay bar <span class="responsive-br"><br></span>v centru Prahy</p>
     </div>
 </div>
 
