--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <!--poster image-->
 <div id="poster" class="mb-5">
     <img src="static/assets/img/poster.jpg" class="d-block w-100 poster-img" alt="Bar">
-    <div class="carousel-caption">
+    <div class="poster-caption">
         <h1>Club Termix</h1>
         <p>Gay bar <span class="responsive-br"><br></span>v centru Prahy</p>
     </div>
@@ -44,7 +44,10 @@
         <p class="lead">Náš sortiment vás určitě nudit nebude. <br>Od kvalitních vín, přes populární likéry, k lákavým likérům.</p>
       </div>
       <div class="col-md-5">
-        <img src="static/assets/img/barman.jpg" alt="barman" class="img-fluid mx-auto ">
+           <picture>
+              <source media="(min-width: 400px) and (max-width: 767px)" srcset="static/assets/img/barman_wide.jpg"/>
+              <img src="static/assets/img/barman.jpg" alt="barman" class="img-fluid mx-auto ">
+          </picture>
       </div>
     </div>
 
@@ -56,7 +59,10 @@
         <p class="lead">Místo na posezení s přáteli, nebo pořádnou oslavu? <br> Jsme připraveni.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="static/assets/img/car.jpg" alt="interier" class="img-fluid mx-auto">
+          <picture>
+              <source media="(min-width: 400px) and (max-width: 767px)" srcset="static/assets/img/car_wide.jpg"/>
+              <img src="static/assets/img/car.jpg" alt="interier" class="img-fluid mx-auto">
+          </picture>
       </div>
     </div>
 
@@ -68,7 +74,10 @@
         <p class="lead">Roztočit to u nás není žádná věda <br> Zchladit se pak můžeš našimi ledovými drinky.</p>
       </div>
       <div class="col-md-5">
-        <img src="static/assets/img/night_life.jpg" alt="barman" class="img-fluid mx-auto">
+          <picture>
+              <source media="(min-width: 400px) and (max-width: 767px)" srcset="static/assets/img/night_life_wide.jpg"/>
+              <img src="static/assets/img/night_life.jpg" alt="party" class="img-fluid mx-auto">
+          </picture>
       </div>
     </div>
 
