--- a/templates/index.html
+++ b/templates/index.html
@@ -18,19 +18,19 @@
         <img src="static/assets/img/drinks.jpg" alt="glasses with drinks" class="rounded-circle img-hover" >
         <h2 class="fw-normal">Lahodné drinky</h2>
         <p>Široká nabídka výborných nápojů. <br>Přijďte ochutnat naše vychlazené koktejly.</p>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        <p><a class="btn btn-secondary" href="#">Nápoje»</a></p>
       </div><!-- /.col-lg-4 -->
        <div class="col-lg-4 col-sm-6 d-flex flex-column align-items-center text-center">
         <img src="static/assets/img/karaoke.jpg" alt="microphone" class="rounded-circle img-hover">
-        <h2 class="fw-normal">Karaoke</h2>
-        <p>Přidejte se do rytmu s populárními hity. <br> Zazpívat si u nás můžete každou středu.</p>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        <h2 class="fw-normal">Zábava</h2>
+        <p>Přidejte se do rytmu s populárními hity. <br> Středa až sobota od 10 večer</p>
+        <p><a class="btn btn-secondary" href="#">Kontakty »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4 col-sm-12 d-flex flex-column align-items-center text-center">
         <img src="static/assets/img/party.jpg" alt="man with costume" class="rounded-circle img-hover">
         <h2 class="fw-normal">Tématické párty</h2>
         <p>O akce u nás není nouze. <br> Přijďte zažít pořádnou zábavu.</p>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        <p><a class="btn btn-secondary" href="#">Galerie »</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -41,7 +41,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">Umíme to roztřepat. <span class="text-body-secondary">Přiďte se o tom přesvědčit.</span></h2>
-        <p class="lead">Náš sortiment vás určitě nudit nebude. <br>Od kvalitních vín, přes populární likéry, k lákavým likérům.</p>
+        <p class="lead">Naši barmani jsou profíci. <br>Dokáží vám namixovat prvotřídní chuťový zážitek.</p>
       </div>
       <div class="col-md-5">
            <picture>
@@ -57,6 +57,7 @@
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">Interiér, který baví. <span class="text-body-secondary">čekáme na vás.</span></h2>
         <p class="lead">Místo na posezení s přáteli, nebo pořádnou oslavu? <br> Jsme připraveni.</p>
+        <p class="lead">Najdete nás na Třebízského 4a na Praze 2</p>
       </div>
       <div class="col-md-5 order-md-1">
           <picture>
@@ -71,7 +72,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">U nás jedeme i po půlnoci. <span class="text-body-secondary">Ukaž, jak to umíš rozjet.</span></h2>
-        <p class="lead">Roztočit to u nás není žádná věda <br> Zchladit se pak můžeš našimi ledovými drinky.</p>
+        <p class="lead">Roztočit to u nás můžes od středy do soboty <br>Otevřeno máme od desíti až do rána</p>
       </div>
       <div class="col-md-5">
           <picture>
