--- a/templates/en/index.html
+++ b/templates/en/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "en/base.html" %}
 {% block title %} Club Termix {% endblock %}
 {% block content %}
 
@@ -7,7 +7,7 @@
     <img src="static/assets/img/poster.jpg" class="d-block w-100 poster-img" alt="Bar">
     <div class="poster-caption">
         <h1>Club Termix</h1>
-        <p>Gay bar <span class="responsive-br"><br></span>v centru Prahy</p>
+        <p>Gay bar <span class="responsive-br"><br></span>in central Prague</p>
     </div>
 </div>
 
@@ -16,75 +16,75 @@
     <div id="feature_list" class="row">
       <div class="col-lg-4 col-sm-6 d-flex flex-column align-items-center text-center">
         <img src="static/assets/img/drinks.jpg" alt="glasses with drinks" class="rounded-circle img-hover" >
-        <h2 class="fw-normal">Lahodné drinky</h2>
-        <p>Široká nabídka výborných nápojů. <br>Přijďte ochutnat naše vychlazené koktejly.</p>
-        <p><a class="btn btn-secondary" href="#">Nápoje»</a></p>
+        <h2 class="fw-normal">Amazing beverages</h2>
+        <p>Wide selection of great drinks. <br>Come to try our ice cooled cocktails.</p>
+        <p><a class="btn btn-secondary" href="#">Beverages»</a></p>
       </div><!-- /.col-lg-4 -->
        <div class="col-lg-4 col-sm-6 d-flex flex-column align-items-center text-center">
         <img src="static/assets/img/karaoke.jpg" alt="microphone" class="rounded-circle img-hover">
-        <h2 class="fw-normal">Zábava</h2>
-        <p>Přidejte se do rytmu s populárními hity. <br> Středa až sobota od 10 večer</p>
-        <p><a class="btn btn-secondary" href="#">Kontakty »</a></p>
+        <h2 class="fw-normal">Entertainment</h2>
+        <p>Dance to the rhythm of popular songs. <br> Wednesday to Friday from 10pm.</p>
+        <p><a class="btn btn-secondary" href="#">Contacts »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4 col-sm-12 d-flex flex-column align-items-center text-center">
         <img src="static/assets/img/party.jpg" alt="man with costume" class="rounded-circle img-hover">
-        <h2 class="fw-normal">Tématické párty</h2>
-        <p>O akce u nás není nouze. <br> Přijďte zažít pořádnou zábavu.</p>
-        <p><a class="btn btn-secondary" href="#">Galerie »</a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
+        <h2 class="fw-normal">Themed Parties</h2>
+<p>We have no shortage of events. <br> Come and experience some real fun.</p>
+<p><a class="btn btn-secondary" href="#">Gallery »</a></p>
+</div><!-- /.col-lg-4 -->
+</div><!-- /.row -->
 
-    <!-- START THE FEATURETTES -->
+<!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider">
+<hr class="featurette-divider">
 
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">Umíme to roztřepat. <span class="text-body-secondary">Přiďte se o tom přesvědčit.</span></h2>
-        <p class="lead">Naši barmani jsou profíci. <br>Dokáží vám namixovat prvotřídní chuťový zážitek.</p>
-      </div>
-      <div class="col-md-5">
-           <picture>
-              <source media="(min-width: 400px) and (max-width: 767.5px)" srcset="static/assets/img/barman_wide.jpg"/>
-              <img src="static/assets/img/barman.jpg" alt="barman" class="img-fluid mx-auto ">
-          </picture>
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1">Interiér, který baví. <span class="text-body-secondary">čekáme na vás.</span></h2>
-        <p class="lead">Místo na posezení s přáteli, nebo pořádnou oslavu? <br> Jsme připraveni.</p>
-        <p class="lead">Najdete nás na Třebízského 4a na Praze 2</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-          <picture>
-              <source media="(min-width: 400px) and (max-width: 767.5px)" srcset="static/assets/img/car_wide.jpg"/>
-              <img src="static/assets/img/car.jpg" alt="interier" class="img-fluid mx-auto">
-          </picture>
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">U nás jedeme i po půlnoci. <span class="text-body-secondary">Ukaž, jak to umíš rozjet.</span></h2>
-        <p class="lead">Roztočit to u nás můžes od středy do soboty <br>Otevřeno máme od desíti až do rána</p>
-      </div>
-      <div class="col-md-5">
-          <picture>
-              <source media="(min-width: 400px) and (max-width: 767.5px)" srcset="static/assets/img/night_life_wide.jpg"/>
-              <img src="static/assets/img/night_life.jpg" alt="party" class="img-fluid mx-auto">
-          </picture>
-      </div>
-    </div>
-
-    <!-- /END THE FEATURETTES -->
-
+<div class="row featurette">
+  <div class="col-md-7">
+    <h2 class="featurette-heading fw-normal lh-1">We know how to shake it up. <span class="text-body-secondary">Come and see for yourself.</span></h2>
+    <p class="lead">Our bartenders are professionals. <br>They can mix you a first-class taste experience.</p>
   </div>
+  <div class="col-md-5">
+       <picture>
+          <source media="(min-width: 400px) and (max-width: 767.5px)" srcset="static/assets/img/barman_wide.jpg"/>
+          <img src="static/assets/img/barman.jpg" alt="bartender" class="img-fluid mx-auto ">
+      </picture>
+  </div>
+</div>
+
+<hr class="featurette-divider">
+
+<div class="row featurette">
+  <div class="col-md-7 order-md-2">
+    <h2 class="featurette-heading fw-normal lh-1">An interior that entertains. <span class="text-body-secondary">We're waiting for you.</span></h2>
+    <p class="lead">A place to sit with friends, or a big celebration? <br> We are ready.</p>
+    <p class="lead">You can find us at Třebízského 4a in Prague 2</p>
+  </div>
+  <div class="col-md-5 order-md-1">
+      <picture>
+          <source media="(min-width: 400px) and (max-width: 767.5px)" srcset="static/assets/img/car_wide.jpg"/>
+          <img src="static/assets/img/car.jpg" alt="interior" class="img-fluid mx-auto">
+      </picture>
+  </div>
+</div>
+
+<hr class="featurette-divider">
+
+<div class="row featurette">
+  <div class="col-md-7">
+    <h2 class="featurette-heading fw-normal lh-1">We go past midnight. <span class="text-body-secondary">Show us how you can party.</span></h2>
+    <p class="lead">You can party with us from Wednesday to Saturday <br>We are open from 10pm till morning</p>
+  </div>
+  <div class="col-md-5">
+      <picture>
+          <source media="(min-width: 400px) and (max-width: 767.5px)" srcset="static/assets/img/night_life_wide.jpg"/>
+          <img src="static/assets/img/night_life.jpg" alt="party" class="img-fluid mx-auto">
+      </picture>
+  </div>
+</div>
+
+<!-- /END THE FEATURETTES -->
+
+</div>
 
 
 
