--- a/templates/en/base.html
+++ b/templates/en/base.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 {% include "svg_sprite.html" %}
-{% include "header.html" %}
+{% include "en/header.html" %}
 {% block content %}
 {% endblock %}
 
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-5 border-top">
-        <p class="col-md-4 mb-0 text-body-secondary">© 2015–2024 Termix Praha s.r.o.</p>
+        <p class="col-md-4 mb-0 text-body-secondary">© 2015–2024 Termix Praha Ltd.</p>
 
         <a href="/"
            class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
