default language taken from browser

--- a/templates/cs/base.html
+++ b/templates/cs/base.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block header %}
-    {% include "cz/header.html" %}
+    {% include "cs/header.html" %}
 {% endblock %}
