--- a/templates/navbar_buttons.html
+++ b/templates/navbar_buttons.html
@@ -2,7 +2,7 @@
      aria-label="Termix Logo" alt="Termix Logo">
 <div class="d-flex align-items-center">
     <div class="navbar-nav d-flex flex-row">
-        <a class="nav-link lang-link px-1" href="{{ url_for('home', lang='cz') }}">
+        <a class="nav-link lang-link px-1" href="{{ url_for('home', lang='cs') }}">
             cs
         </a>
         <a class="nav-link lang-link px-3" href="{{ url_for('home', lang='en') }}">
