--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -34,7 +34,6 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-family: 'Edu AU VIC WA NT Hand', sans-serif;
 }
 
 #header_logo{
@@ -43,10 +42,12 @@ body {
 
 .poster-caption h1 {
     font-size: 3rem; /* Default size */
+    font-family: 'Edu AU VIC WA NT Hand', sans-serif;
     font-weight: bold;
 }
 .poster-caption p {
     font-size: 1.5rem; /* Default size */
+    font-family: 'Nunito', sans-serif;
 }
 
 /* split title  */
@@ -76,9 +77,9 @@ body {
 }
 
 /* Thin out the marketing headings*/
-.featurette-heading {
+/*.featurette-heading {
   letter-spacing: -.05rem;
-}
+}*/
 
 
 .featurette-heading {
@@ -115,6 +116,10 @@ body {
     .poster-caption{
         width: 70%;
     }
+    .poster-caption h1 {
+    font-size: 2.5rem; /* Default size */
+    font-weight: bold;
+}
  }
 @media (max-width: 576px) {
   .featurette-heading {
