--- a/templates/cs/index.html
+++ b/templates/cs/index.html
@@ -40,7 +40,7 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">Umíme to roztřepat. <span class="text-body-secondary">Přiďte se o tom přesvědčit.</span></h2>
+        <h2 class="featurette-heading fw-normal lh-1">Umíme to roztřepat. <span class="text-body-secondary-custom">Přiďte se o tom přesvědčit.</span></h2>
         <p class="lead">Naši barmani jsou profíci. <br>Dokáží vám namixovat prvotřídní chuťový zážitek.</p>
       </div>
       <div class="col-md-5">
@@ -55,7 +55,7 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1">Interiér, který baví. <span class="text-body-secondary">čekáme na vás.</span></h2>
+        <h2 class="featurette-heading fw-normal lh-1">Interiér, který baví. <span class="text-body-secondary-custom">čekáme na vás.</span></h2>
         <p class="lead">Místo na posezení s přáteli, nebo pořádnou oslavu? <br> Jsme připraveni.</p>
       </div>
       <div class="col-md-5 order-md-1">
@@ -70,7 +70,7 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">U nás jedeme i po půlnoci. <span class="text-body-secondary">Ukaž, jak to umíš rozjet.</span></h2>
+        <h2 class="featurette-heading fw-normal lh-1">U nás jedeme i po půlnoci. <span class="text-body-secondary-custom">Ukaž, jak to umíš rozjet.</span></h2>
         <p class="lead">Roztočit to u nás můžes od středy do soboty <br>Otevřeno máme od desíti až do rána</p>
       </div>
       <div class="col-md-5">
