--- a/templates/en/index.html
+++ b/templates/en/index.html
@@ -40,7 +40,7 @@
 
 <div class="row featurette">
   <div class="col-md-7">
-    <h2 class="featurette-heading fw-normal lh-1">We know how to shake it up. <span class="text-body-secondary">Come and see for yourself.</span></h2>
+    <h2 class="featurette-heading fw-normal lh-1">We know how to shake it up. <span class="text-body-secondary-custom">Come and see for yourself.</span></h2>
     <p class="lead">Our bartenders are professionals. <br>They can mix you a first-class taste experience.</p>
   </div>
   <div class="col-md-5">
@@ -55,7 +55,7 @@
 
 <div class="row featurette">
   <div class="col-md-7 order-md-2">
-    <h2 class="featurette-heading fw-normal lh-1">An interior that entertains. <span class="text-body-secondary">We're waiting for you.</span></h2>
+    <h2 class="featurette-heading fw-normal lh-1">An interior that entertains. <span class="text-body-secondary-custom">We're waiting for you.</span></h2>
     <p class="lead">A place to sit with friends, or a big celebration? <br> We are ready.</p>
   </div>
   <div class="col-md-5 order-md-1">
@@ -70,7 +70,7 @@
 
 <div class="row featurette">
   <div class="col-md-7">
-    <h2 class="featurette-heading fw-normal lh-1">We go past midnight. <span class="text-body-secondary">Show us how you can party.</span></h2>
+    <h2 class="featurette-heading fw-normal lh-1">We go past midnight. <span class="text-body-secondary-custom">Show us how you can party.</span></h2>
     <p class="lead">You can party with us from Wednesday to Saturday <br>We are open from 10pm till morning</p>
   </div>
   <div class="col-md-5">
