--- a/templates/cs/index.html
+++ b/templates/cs/index.html
@@ -40,7 +40,7 @@
 
     <div class="row featurette">
         <div class="col-md-7">
-            <h2 class="featurette-heading fw-normal lh-1">Umíme to roztřepat. <span class="text-body-secondary-custom">Přiďte se o tom přesvědčit.</span>
+            <h2 class="featurette-heading fw-normal lh-1">Umíme to roztřepat. <span class="text-body-secondary-custom">Přijďte se o tom přesvědčit.</span>
             </h2>
             <p class="lead">Naši barmani jsou profíci. <br>Dokáží vám namixovat prvotřídní chuťový zážitek.</p>
         </div>
