--- a/templates/en/index.html
+++ b/templates/en/index.html
@@ -129,7 +129,7 @@
                             <table class="table table-bordered">
                                 <tbody>
                                 <tr>
-                                    <td class="address text-center">"Entry 18+"</td>
+                                    <td class="address text-center">Entry 18+</td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -147,6 +147,9 @@
                                 <tbody>
                                 <tr>
                                     <td class="address text-center">Cash only</td>
+                                </tr>
+                                <tr>
+                                    <td class="address text-center">Entrance fee</td>
                                 </tr>
                                 </tbody>
                             </table>
