--- a/templates/cs/index.html
+++ b/templates/cs/index.html
@@ -146,7 +146,10 @@
                             <table class="table table-bordered">
                                 <tbody>
                                 <tr>
-                                    <td class="address text-center">Platba pouze v hotovosti</td>
+                                    <td class="address text-center">Pouze hotovost</td>
+                                </tr>
+                                 <tr>
+                                    <td class="address text-center">Vstupné</td>
                                 </tr>
                                 </tbody>
                             </table>
