--- a/templates/cs/header.html
+++ b/templates/cs/header.html
@@ -4,7 +4,7 @@
         <div class="collapse navbar-collapse" id="navbarsExample01">
             <ul class="navbar-nav me-auto mb-2">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Domů</a>
+                    <a class="nav-link" href="{{ url_for('home', lang='cs') }}">Domů</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">O Nás</a>
@@ -16,7 +16,7 @@
                     <a class="nav-link" href="#">Nápojový Lístek</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Galerie</a>
+                    <a class="nav-link" href="{{ url_for('gallery', lang='cs') }}">Galerie</a>
                 </li>
             </ul>
         </div>
