--- a/templates/en/header.html
+++ b/templates/en/header.html
@@ -4,7 +4,7 @@
         <div class="collapse navbar-collapse" id="navbarsExample01">
             <ul class="navbar-nav me-auto mb-2">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Home</a>
+                    <a class="nav-link" aria-current="page" href="{{ url_for('home', lang='en') }}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About Us</a>
@@ -16,7 +16,7 @@
                     <a class="nav-link" href="#">Beverages</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Gallery</a>
+                    <a class="nav-link" href="{{ url_for('gallery', lang='en') }}">Gallery</a>
                 </li>
             </ul>
         </div>
