--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,11 @@
 <html lang="cs" data-bs-theme="dark">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+    <title>Club Termix</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="static/css/styles.css" rel="stylesheet">
+    <link href="static/css/gallery_styles.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Edu+AU+VIC+WA+NT+Hand&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
     </style>
