--- a/templates/cs/index.html
+++ b/templates/cs/index.html
@@ -29,7 +29,7 @@
             <img src="static/assets/img/party.jpg" alt="man with costume" class="rounded-circle img-hover">
             <h2 class="fw-normal">Tématické párty</h2>
             <p>O akce u nás není nouze. <br> Přijďte zažít pořádnou zábavu.</p>
-            <p><a class="btn btn-secondary" href="#">Galerie »</a></p>
+            <p><a class="btn btn-secondary" href="{{ url_for('gallery', lang='cs') }}">Galerie »</a></p>
         </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
