--- a/templates/en/index.html
+++ b/templates/en/index.html
@@ -29,7 +29,7 @@
             <img src="static/assets/img/party.jpg" alt="man with costume" class="rounded-circle img-hover">
             <h2 class="fw-normal">Themed Parties</h2>
             <p>We have no shortage of events. <br> Come and experience some real fun.</p>
-            <p><a class="btn btn-secondary" href="#">Gallery »</a></p>
+            <p><a class="btn btn-secondary" href="{{ url_for('gallery', lang='en') }}">Gallery »</a></p>
         </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
