contact page created

--- a/templates/cs/index.html
+++ b/templates/cs/index.html
@@ -23,7 +23,7 @@
             <img src="static/assets/img/karaoke.jpg" alt="microphone" class="rounded-circle img-hover">
             <h2 class="fw-normal">Zábava</h2>
             <p>Přidejte se do rytmu s populárními hity. <br> Středa až sobota od 10 večer</p>
-            <p><a class="btn btn-secondary" href="#">Kontakty »</a></p>
+            <p><a class="btn btn-secondary" href="{{ url_for('home', lang='cs') }}">Kontakty »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4 col-sm-12 d-flex flex-column align-items-center text-center">
             <img src="static/assets/img/party.jpg" alt="man with costume" class="rounded-circle img-hover">
