--- a/templates/en/index.html
+++ b/templates/en/index.html
@@ -23,7 +23,7 @@
             <img src="static/assets/img/karaoke.jpg" alt="microphone" class="rounded-circle img-hover">
             <h2 class="fw-normal">Entertainment</h2>
             <p>Dance to the rhythm of popular songs. <br> Wednesday to Friday from 10pm.</p>
-            <p><a class="btn btn-secondary" href="#">Contacts »</a></p>
+            <p><a class="btn btn-secondary" href="{{ url_for('contacts', lang='en') }}">Contacts »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4 col-sm-12 d-flex flex-column align-items-center text-center">
             <img src="static/assets/img/party.jpg" alt="man with costume" class="rounded-circle img-hover">
