--- a/templates/cs/header.html
+++ b/templates/cs/header.html
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
     <div class="container-fluid ">
+        <a href="{{ url_for('home', lang='cs') }}">
+            <img src="static/assets/dark_gray_logo.svg" class="navbar-brand" id="header_logo" role="img"
+                 aria-label="Termix Logo" alt="Termix Logo">
+        </a>
         {% include "navbar_buttons.html" %}
         <div class="collapse navbar-collapse" id="navbarsExample01">
             <ul class="navbar-nav me-auto mb-2">
@@ -10,7 +14,7 @@
                     <a class="nav-link" href="#">O Nás</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Kontakty</a>
+                    <a class="nav-link" href="{{ url_for('contacts', lang='cs') }}">Kontakty</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Nápojový Lístek</a>
