--- a/templates/en/header.html
+++ b/templates/en/header.html
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
     <div class="container-fluid ">
-       {% include "navbar_buttons.html" %}
+        <a href="{{ url_for('home', lang='en') }}">
+            <img src="static/assets/dark_gray_logo.svg" class="navbar-brand" id="header_logo" role="img"
+                 aria-label="Termix Logo" alt="Termix Logo">
+        </a>
+        {% include "navbar_buttons.html" %}
         <div class="collapse navbar-collapse" id="navbarsExample01">
             <ul class="navbar-nav me-auto mb-2">
                 <li class="nav-item">
@@ -10,7 +14,7 @@
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacts</a>
+                    <a class="nav-link" href="{{ url_for('contacts', lang='en') }}">Contacts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Beverages</a>
