--- a/templates/navbar_buttons.html
+++ b/templates/navbar_buttons.html
@@ -1,8 +1,7 @@
-<img src="static/assets/dark_gray_logo.svg" class="navbar-brand" id="header_logo" role="img"
-     aria-label="Termix Logo" alt="Termix Logo">
 <div class="d-flex align-items-center">
     <div class="navbar-nav d-flex flex-row">
-         {% set current_url = request.full_path %}
+        <!-- redirect to language variant of current page -->
+        {% set current_url = request.full_path %}
         {% set cs_url = current_url.replace('lang=en', 'lang=cs') %}
         {% set en_url = current_url.replace('lang=cs', 'lang=en') %}
         <a class="nav-link lang-link px-1" href="{{ cs_url }}">
