contact page location

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="static/css/styles.css" rel="stylesheet">
     <link href="static/css/gallery_styles.css" rel="stylesheet">
+    <link href="static/css/contact_styles.css" rel="stylesheet">
     <link rel="icon" href="static/assets/bar.svg" type="image/svg+xml">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Edu+AU+VIC+WA+NT+Hand&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
