--- a/templates/cs/contacts.html
+++ b/templates/cs/contacts.html
@@ -8,7 +8,7 @@
             <div class="col-12 col-md-6">
                 <h2 class="contact-heading">Spojení</h2>
                 <ul class="location_details">
-                    <li class="location_detail">Třebízského 4a</li>
+                    <li class="location_detail">Třebízského 4a, Praha 2</li>
                     <li class="location_detail">Vinohradská tržnice (tram) - 100m</li>
                     <li class="location_detail">
                         Jiřího z Poděbrad
