--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
         <div class="container-fluid">
             <!-- Logo -->
             <a href="{{ url_for('home', lang=lang) }}">
-                <img src="{{ url_for('static', filename='assets/dark_gray_logo.svg') }}" class="navbar-brand" id="header_logo"
+                <img src="{{ url_for('static', filename='assets/logos/dark_gray_logo.svg') }}" class="navbar-brand" id="header_logo"
                      role="img" aria-label="Termix Logo" alt="Termix Logo">
             </a>
 
@@ -77,17 +77,17 @@
             <ul class="nav col-md-4 justify-content-end">
                 <li class="nav-item footer-logo">
                     <a href="{{ url_for('home', lang=lang) }}" class="nav-link px-3 text-body-secondary">
-                        <img src="{{ url_for('static', filename='assets/logos/house.svg') }}" alt="{{ translations.navbar.home }}">
+                        <img src="{{ url_for('static', filename='assets/logos/house.svg') }}" class="svg-icon" alt="{{ translations.navbar.home }}">
                     </a>
                 </li>
                 <li class="nav-item footer-logo">
                     <a href="https://www.facebook.com/club.termix/" target="_blank" class="nav-link px-3 text-body-secondary">
-                        <img src="{{ url_for('static', filename='assets/logos/facebook.svg') }}" alt="Facebook">
+                        <img src="{{ url_for('static', filename='assets/logos/facebook.svg') }}" class="svg-icon" alt="Facebook">
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="https://www.instagram.com/termix_club/" target="_blank" class="nav-link px-3 text-body-secondary">
-                        <img src="{{ url_for('static', filename='assets/logos/instagram.svg') }}" alt="Instagram">
+                        <img src="{{ url_for('static', filename='assets/logos/instagram.svg') }}" class="svg-icon" alt="Instagram">
                     </a>
                 </li>
             </ul>
