--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- Custom CSS -->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="icon" href="{{ url_for('static', filename='assets/bar.svg') }}" type="image/svg+xml">
+    <link rel="icon" href="{{ url_for('static', filename='assets/logos/bar_glass.svg') }}" type="image/svg+xml">
 
     <!-- Google Fonts -->
     <style>
@@ -27,77 +29,88 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-dark bg-dark" aria-label="Navigation">
-        <div class="container-fluid">
-            <!-- Logo -->
-            <a href="{{ url_for('home', lang=lang) }}">
-                <img src="{{ url_for('static', filename='assets/logos/dark_gray_logo.svg') }}" class="navbar-brand" id="header_logo"
-                     role="img" aria-label="Termix Logo" alt="Termix Logo">
-            </a>
+<!-- Include SVG Sprite -->
+<object type="image/svg+xml" data="{{ url_for('static', filename='assets/logos/svg-sprite.svg') }}"
+        style="display: none;"></object>
 
-            <!-- Language Switcher and Toggler Button -->
-            <div class="d-flex align-items-center">
-                <div class="navbar-nav d-flex flex-row">
-                    <a class="nav-link lang-link px-1" href="{{ cs_url }}">cs</a>
-                    <a class="nav-link lang-link px-3" href="{{ en_url }}">en</a>
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01"
-                        aria-controls="navbarsExample01" aria-expanded="false" aria-label="{{ translations.navbar.label }}">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
+<!-- Navbar -->
+<nav class="navbar navbar-dark bg-dark" aria-label="Navigation">
+    <div class="container-fluid">
+        <!-- Logo -->
+        <a href="{{ url_for('home', lang=lang) }}">
+            <img src="{{ url_for('static', filename='assets/logos/dark_gray_logo.svg') }}" class="navbar-brand"
+                 id="header_logo"
+                 role="img" aria-label="Termix Logo" alt="Termix Logo">
+        </a>
 
-            <!-- Navbar Links -->
-            <div class="collapse navbar-collapse" id="navbarsExample01">
-                <ul class="navbar-nav me-auto mb-2">
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('home', lang=lang) }}">{{ translations.navbar.home }}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">{{ translations.navbar.about }}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('contacts', lang=lang) }}">{{ translations.navbar.contacts }}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">{{ translations.navbar.drinks }}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('gallery', lang=lang) }}">{{ translations.navbar.gallery }}</a></li>
-                </ul>
+        <!-- Language Switcher and Toggler Button -->
+        <div class="d-flex align-items-center">
+            <div class="navbar-nav d-flex flex-row">
+                <a class="nav-link lang-link px-1" href="{{ cs_url }}">cs</a>
+                <a class="nav-link lang-link px-3" href="{{ en_url }}">en</a>
             </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01"
+                    aria-controls="navbarsExample01" aria-expanded="false" aria-label="{{ translations.navbar.label }}">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
-    </nav>
 
-    <!-- Page Content -->
-    <main>
-        {% block content %}{% endblock %}
-    </main>
-
-    <!-- Footer -->
-    <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-5 border-top">
-            <p class="col-md-4 mb-0 text-body-secondary">© 2003–{{ current_year }} Termix Praha s.r.o.</p>
-            <a href="{{ url_for('home', lang=lang) }}" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <img src="{{ url_for('static', filename='assets/logos/dark_gray_logo.svg') }}" class="bi me-2" width="40"
-                     aria-label="Termix Logo" alt="Termix Logo">
-            </a>
-            <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item footer-logo">
-                    <a href="{{ url_for('home', lang=lang) }}" class="nav-link px-3 text-body-secondary">
-                        <img src="{{ url_for('static', filename='assets/logos/house.svg') }}" class="svg-icon" alt="{{ translations.navbar.home }}">
-                    </a>
-                </li>
-                <li class="nav-item footer-logo">
-                    <a href="https://www.facebook.com/club.termix/" target="_blank" class="nav-link px-3 text-body-secondary">
-                        <img src="{{ url_for('static', filename='assets/logos/facebook.svg') }}" class="svg-icon" alt="Facebook">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="https://www.instagram.com/termix_club/" target="_blank" class="nav-link px-3 text-body-secondary">
-                        <img src="{{ url_for('static', filename='assets/logos/instagram.svg') }}" class="svg-icon" alt="Instagram">
-                    </a>
-                </li>
+        <!-- Navbar Links -->
+        <div class="collapse navbar-collapse" id="navbarsExample01">
+            <ul class="navbar-nav me-auto mb-2">
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('home', lang=lang) }}">{{
+                    translations.navbar.home }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">{{ translations.navbar.about }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('contacts', lang=lang) }}">{{
+                    translations.navbar.contacts }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">{{ translations.navbar.drinks }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('gallery', lang=lang) }}">{{
+                    translations.navbar.gallery }}</a></li>
             </ul>
-        </footer>
+        </div>
     </div>
+</nav>
 
-    <!-- JavaScript Links -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+<!-- Page Content -->
+<main>
+    {% block content %}{% endblock %}
+</main>
+
+<!-- Footer -->
+<div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-5 border-top">
+        <p class="col-md-4 mb-0 text-body-secondary">© 2003–{{ current_year }} Termix Praha s.r.o.</p>
+        <a href="{{ url_for('home', lang=lang) }}"
+           class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <img src="{{ url_for('static', filename='assets/logos/dark_gray_logo.svg') }}" class="bi me-2" width="40"
+                 aria-label="Termix Logo" alt="Termix Logo">
+        </a>
+        <ul class="nav col-md-4 justify-content-end">
+            <li class="nav-item footer-logo">
+                <a href="{{ url_for('home', lang=lang) }}" class="nav-link px-3 text-body-secondary">
+                    <i class="bi bi-house svg-icon"></i>
+                </a>
+            </li>
+            <li class="nav-item footer-logo">
+                <a href="https://www.facebook.com/club.termix/" target="_blank"
+                   class="nav-link px-3 text-body-secondary">
+                   <i class="bi bi-facebook"></i>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="https://www.instagram.com/termix_club/" target="_blank"
+                   class="nav-link px-3 text-body-secondary">
+                     <i class="bi bi-instagram"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
+</div>
+
+<!-- JavaScript Links -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
